--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
   width: 100%;
   height: 100%;
   background: center/cover no-repeat fixed;
+  overflow: hidden;
 }
 
 #date-time-container {
